opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/stdio"
bug-reports: "https://github.com/janestreet/stdio/issues"
dev-repo: "https://github.com/janestreet/stdio.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "stdio" "--root" "." "-j" jobs]
]
depends: [
  "base"
  "jbuilder"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Standard IO library for OCaml

Stdio implements simple input/output functionalities for OCaml.

It re-exports the input/output functions of the OCaml standard
libraries using a more consistent API.
"
